# spacegame

./: .gitignore  CMakeLists.txt  README.rst  game.command  gameNorun.command
include/assimp/: revision.h
source/: .main.cpp.swp  main.cpp
source/assets/models/: coolmanny.blend  coolmanny.glb  coolmanny2.glb  coolmanny3.glb  noAnimCoolmanny.glb  rotatingCube.glb  silly.dae  silly.fbx  silly2.fbx  sillyDance.fbx
source/assets/models/coolmanny3/: coolmanny3.gltf
source/assets/models/coolmanny4/: coolmanny.gltf
source/assets/models/eagle/: license.txt  scene.gltf
source/assets/models/garbage/: scene.gltf
source/assets/models/super_horny/: license.txt  scene.gltf
source/assets/shaders/: core.fs  core.vs  dCore.fs  vCore.fs
source/assets/shaders/core/: mcore.fs  mcore.vs  textCore.fs  textCore.vs  ucore.fs  weighedCore.fs  weighedCore.vs  weightsTest.fs  weightsTest.vs
source/graphics/: dLight.cpp  dLight.h  dMesh.cpp  dMesh.h  light.cpp  light.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vMesh.cpp  vMesh.h  vMesh_notex.cpp  vMesh_notex.h
source/graphics/models/: cube.hpp  dCube.hpp  dModel.cpp  dModel.h  model.cpp  model.h  ucube.hpp  vCube.hpp  vCube_notex.hpp  vLightsource.hpp  vModel.h  vModel_notex.cpp  vModel_notex.h  vcube.hpp  vlightsource.hpp
source/graphics/text/: text.cpp  text.h
source/graphics/textures/: dTexture.cpp  dTexture.h  texture.cpp  texture.h  vTexture.cpp  vTexture.h
source/graphics/utility/: mesh.cpp  mesh.h  model.cpp  model.h  staticMesh.cpp  staticMesh.h  staticModel.cpp  staticModel.h  weighedMesh.cpp  weighedMesh.h  weighedModel.cpp  weighedModel.h
source/io/: camera.cpp  mouse.cpp  mouse.h  screen.cpp
source/utility/math/: mat.cpp  mat.h
source/utility/scene/: scene.cpp  scene.h
source/utility/terrain/: terrain.cpp  terrain.h
source/utility/types/: glMemoryBuffers.hpp
